# nRF51822-MBED

./: .gitignore  .gitmodules  README.md
BLE_NUDGE/: BuddiService.cpp  BuddiService.h  CMakeLists.txt  Configuration.h
src/: arm_toolchain.cmake  gcc4mbed.c
src/BLE_NUDGE/: CMakeLists.txt  Logger.h  main.cpp
src/MetaWear/: CMakeLists.txt  Makefile  MbedAgent.cpp  MbedAgent.h  main.cpp
src/MetaWear/devices/: DHT.cpp  DHT.h  DeviceFeedback.cpp  DeviceFeedback.h  DeviceIO.cpp  DeviceIO.h  MMA8452.cpp  MMA8452.h  MMA845x.cpp  MMA845x.h
src/MetaWear/measurement/: AccelerationMeasurement.cpp  AccelerationMeasurement.h  AnalogMeasurement.cpp  AnalogMeasurement.h  TemperatureMeasurement.cpp  TemperatureMeasurement.h
src/test/: CMakeLists.txt  Makefile  main.cpp
